@@ -18,7 +18,7 @@
 
 while keeping its api constant'''
 from . helpers import set_up_logging
-from . preferences import preferences
+#from . preferences import preferences
 from . Window import Window
 from . pasaffeconfig import get_version
 
