@@ -14,6 +14,7 @@ For a detailed list of changes, please see ChangeLog.
    - Fix initial size of notes field
    - Fix about dialog layout
    - Updated requirements in README file
+   - Refactor and simplify GSettings code to use bindings
 
 0.11 (2011-12-11):
 
